clean appsettings and add Razor page

--- a/DocuSign.Demo.CsharpApp/appsettings.json
+++ b/DocuSign.Demo.CsharpApp/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DocuSign": {
+    "CientId": "clientId",
+    "IDPServerBaseUrl": "https://account-d.docusign.com",
+    "AuthorizationEndpoint": "",
+    "TokenEndpoint": "/oauth/token",
+    "UserInformationEndpoint": "/oauth/userinfo"
+  },
   "AllowedHosts": "*"
 }
