cleaning up some method and use UserInfo endpoint

--- a/DocuSign.Tsp/DocuSign.Tsp.csproj
+++ b/DocuSign.Tsp/DocuSign.Tsp.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Api\" />
+    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DocuSign.eSign.dll" Version="4.1.0" />
