--- a/DocuSign.Demo.CsharpApp/appsettings.json
+++ b/DocuSign.Demo.CsharpApp/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DocuSign": {
+    "CientId": "clientId",
+    "ClientSecret":  "clientSecret",
+    "IDPServerBaseUrl": "https://account-d.docusign.com"
+  },
   "AllowedHosts": "*"
 }
