--- a/DocuSign.Demo.CsharpApp/DocuSign.Demo.CsharpApp.csproj
+++ b/DocuSign.Demo.CsharpApp/DocuSign.Demo.CsharpApp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
 
@@ -15,5 +15,14 @@
     <ProjectReference Include="..\DocuSign.Demo.SignatureProvider\DocuSign.Demo.SignatureProvider.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="Services\" />
+    <Folder Include="Pages\DocuSignTsp\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Pages\DocuSignTsp.cshtml" />
   </ItemGroup>
 </Project>
