--- a/DocuSign.Demo.CsharpApp/DocuSign.Demo.CsharpApp.csproj
+++ b/DocuSign.Demo.CsharpApp/DocuSign.Demo.CsharpApp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
 
@@ -9,10 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DocuSign.Tsp\DocuSign.Tsp.csproj">
+    <ProjectReference Include="..\DocuSign.Demo.SignatureProvider\DocuSign.Demo.SignatureProvider.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-    <ProjectReference Include="..\DocuSign.Demo.SignatureProvider\DocuSign.Demo.SignatureProvider.csproj">
+    <ProjectReference Include="..\DocuSign.Tsp\DocuSign.Tsp.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
